# Bloom-Client

./: README.md  package-lock.json  package.json  tailwind.config.js
.github/workflows/: release.yml
bloom-menu/: build.gradle  gradle.properties  gradlew
bloom-menu/src/client/java/com/bloomunit/bloommenu/client/: BloomFeatureController.java  BloomMenuClient.java
bloom-menu/src/client/java/com/bloomunit/bloommenu/client/config/: BloomConfig.java  BloomConfigManager.java
bloom-menu/src/client/java/com/bloomunit/bloommenu/client/hud/: BloomHudRenderer.java  BloomHudTracker.java
bloom-menu/src/main/java/com/bloomunit/bloommenu/: BloomMenuMod.java
bloom-menu/src/main/resources/: fabric.mod.json
bloom-menu/src/main/resources/assets/bloommenu/lang/: en_us.json
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: auth.rs  bloom_mod.rs  discord_presence.rs  downloader.rs  external_updater.rs  fabric.rs  instances.rs  launcher.rs  lib.rs  mojang.rs  paths.rs
src/components/: CreateInstanceModal.tsx  Layout.tsx  PageWidgets.tsx  Particles.tsx  SidebarRail.tsx
src/constants/: motion.ts  version.ts
src/hooks/: useAuth.ts  useDownloader.ts  useFabric.ts  useInstances.ts  useMojang.ts
src/pages/: Downloads.tsx  Help.tsx  Home.tsx  InstanceEditor.tsx  Instances.tsx  Marketplace.tsx  ModpacksMarket.tsx  ModsMarket.tsx  ResourcePacksMarket.tsx  Settings.tsx  SkinStudio.tsx  Widgets.tsx
src/services/: presence.ts  tauri.ts  updater.ts
(+2 files in other folders)
